chore: fix deprecation warnings